2012-02-08  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-compat.el: Add a compat for the old `url-retrieve'.

2012-02-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-compat.el: Make `help-function-arglist' be compatible on Emacs
	23.1.

2012-02-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-show-thread): Revert last two changes.

2012-02-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (smtpmail-smtp-user): Silence compiler warning.

2012-02-06  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-multi-smtp-send-mail): Also allow specifying the
	SMTP user name.

2012-02-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-show-thread):
	next-single-char-property-change may return nil in XEmacs.
	(gnus-summary-article-map): Fix typo.

2012-02-09  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-wait-for-response): Minor fixup of message string.

	* gnus.el (gnus-server-extend-method): Don't add an -address component
	if the method already has one (bug#9676).

2012-02-08  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-insert-old-articles): Use a default instead
	of an initial-input for consistency (bug#10757).

	* dgnushack.el: Fix XEmacs compilation warning.

	* shr.el: Inhibit getting and sending cookies when fetching pictures.

	* gnus-html.el (gnus-html-schedule-image-fetching): Ditto.

2012-02-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-remove-trailing-whitespace): Don't strip whitespace from
	lines that are narrower than the window width.  Otherwise background
	"blocks" will look less readable.

2012-02-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-show-thread): Revert last two changes.

2012-02-07  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-transform-headers): Remove unused variable.
	(nnimap-transform-headers): Fix parsing BODYSTRUCTURE elements that
	have newlines within the strings, and where the UID comes after the